--- a/Unit_8/8_4.html
+++ b/Unit_8/8_4.html
@@ -8,7 +8,7 @@
 var requestAnimationFrame=window.requestAnimationFrame
 ||window.mozRequestAnimationFrame
 ||window.webkitRequestAnimationFrame
-||window.mozRequestAnimationFrame;
+||window.msRequestAnimationFrame;
 window.requestAnimationFrame=requestAnimationFrame;
   var cube=null;
   var renderer=null;
